[package]
name = "debian-packaging"
version = "0.18.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "MPL-2.0"
description = "Debian packaging primitives"
keywords = ["debian", "package", "apt", "deb"]
homepage = "https://github.com/indygreg/linux-packaging-rs"
repository = "https://github.com/indygreg/linux-packaging-rs.git"
readme = "README.md"

[dependencies]
ar = "0.9.0"
async-std = { version = "1.13.0", features = ["unstable"] }
async-tar = "0.5.0"
async-trait = "0.1.83"
bytes = "1.8.0"
chrono = "0.4.38"
digest = "0.10.7"
futures = "0.3.31"
hex = "0.4.3"
libflate = "2.1.0"
mailparse = "0.15.0"
md-5 = "0.10.6"
once_cell = "1.18.0"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
pin-project = "1.1.3"
pgp = "0.14.0"
pgp-cleartext = "0.11.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
sha-1 = "0.10.1"
sha2 = "0.10.8"
simple-file-manifest = "0.11.0"
smallvec = "1.13.2"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tar = "0.4.43"
thiserror = "1.0.66"
tokio = { version = "1.41.0", default-features = false, optional = true }
url = "2.5.2"
xz2 = { version = "0.1.7", features = ["static"] }
zstd = "0.13.2"

[dependencies.async-compression]
version = "0.4.17"
features = ["bzip2", "futures-io", "gzip", "lzma", "xz", "zstd"]

[dependencies.reqwest]
version = "0.12.9"
optional = true
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.rusoto_core]
version = "0.48.0"
optional = true
default-features = false
features = ["rustls"]

[dependencies.rusoto_s3]
version = "0.48.0"
optional = true
default-features = false
features = ["rustls"]

[dev-dependencies]
glob = "0.3.1"
indoc = "2.0.5"
tempfile = "3.13.0"
tokio = { version = "1.41.0", features = ["macros", "rt"] }

[features]
default = ["http", "s3"]
http = ["reqwest"]
s3 = ["dep:rusoto_core", "dep:rusoto_s3", "dep:tokio"]
