[package]
name = "debian-packaging"
version = "0.18.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
rust-version = "1.88.0"
license = "MPL-2.0"
description = "Debian packaging primitives"
keywords = ["debian", "package", "apt", "deb"]
homepage = "https://github.com/indygreg/linux-packaging-rs"
repository = "https://github.com/indygreg/linux-packaging-rs.git"
readme = "README.md"

[dependencies]
ar = "0.9.0"
async-std = { version = "1.13.2", features = ["unstable"] }
async-tar = "0.5.1"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = "0.4.43"
digest = "0.10.7"
futures = "0.3.31"
hex = "0.4.3"
libflate = "2.2.1"
liblzma = { version = "0.4.5", features = ["static"] }
mailparse = "0.16.1"
md-5 = "0.10.6"
once_cell = "1.21.3"
os_str_bytes = { version = "7.1.1", features = ["conversions"] }
pin-project = "1.1.10"
pgp = "0.14.2"
pgp-cleartext = "0.11.0"
rand = "0.8.5"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
sha-1 = "0.10.1"
sha2 = "0.10.9"
simple-file-manifest = "0.11.0"
smallvec = "1.15.1"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tar = "0.4.44"
thiserror = "1.0.69"
tokio = { version = "1.49.0", default-features = false, optional = true }
url = "2.5.8"
zstd = "0.13.3"

[dependencies.async-compression]
version = "0.4.37"
features = ["bzip2", "futures-io", "gzip", "lzma", "xz", "zstd"]

[dependencies.reqwest]
version = "0.12.28"
optional = true
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.rusoto_core]
version = "0.48.0"
optional = true
default-features = false
features = ["rustls"]

[dependencies.rusoto_s3]
version = "0.48.0"
optional = true
default-features = false
features = ["rustls"]

[dev-dependencies]
glob = "0.3.3"
indoc = "2.0.7"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["macros", "rt"] }

[features]
default = ["http", "s3"]
http = ["reqwest"]
s3 = ["dep:rusoto_core", "dep:rusoto_s3", "dep:tokio"]
