[package]
name = "debian-repo-tool"
version = "0.8.0-pre"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "CLI tool to interact with Debian repositories"
keywords = ["debian", "package", "apt", "deb"]
homepage = "https://github.com/indygreg/linux-packaging-rs"
repository = "https://github.com/indygreg/linux-packaging-rs.git"
readme = "README.md"

[[bin]]
name = "drt"
path = "src/main.rs"

[dependencies]
clap = "3.2.23"
num_cpus = "1.15.0"
pbr = "1.1.1"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }

[dependencies.debian-packaging]
version = "0.16.0-pre"
path = "../debian-packaging"
