[package]
name = "linux-package-analyzer"
version = "0.2.0-pre"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "CLI tool to analyze Linux packages"
keywords = ["deb", "package", "rpm"]
homepage = "https://github.com/indygreg/linux-packaging-rs"
repository = "https://github.com/indygreg/linux-packaging-rs.git"
readme = "README.md"

[[bin]]
name = "lpa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
clap = "3.2.25"
cpio = "0.2.2"
futures = "0.3.28"
futures-util = "0.3.28"
iced-x86 = "1.20.0"
indoc = "2.0.3"
num_cpus = "1.16.0"
object = "0.31.1"
once_cell = "1.18.0"
pbr = "1.1.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
symbolic-demangle = "12.3.0"
tokio = { version = "1.31.0", features = ["full"] }
url = "2.4.0"
xz2 = { version = "0.1.7", features = ["static"] }
zstd = "0.12.4"

[dependencies.debian-packaging]
version = "0.17.0-pre"
path = "../debian-packaging"

[dependencies.rpm-repository]
version = "0.2.0-pre"
path = "../rpm-repository"

# rpm-rs seems to be unmaintained and its old dependencies are holding us back.
# Disabled until we figure out a path forward.
#[dependencies.rpm-rs]
#git = "https://github.com/indygreg/rpm-rs"
#rev = "d6623c68a85e3a14f4260c2161c348fa697131c0"

[dev-dependencies]
trycmd = "0.14.16"
