[package]
name = "rpm-repository"
version = "0.3.0-dev"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "RPM repository interaction"
keywords = ["createrepo", "rpm", "packaging", "repomd", "yum"]
homepage = "https://github.com/indygreg/linux-packaging-rs"
repository = "https://github.com/indygreg/linux-packaging-rs.git"
readme = "README.md"

[dependencies]
digest = "0.10.7"
futures = "0.3.29"
hex = "0.4.3"
pin-project = "1.1.3"
serde = { version = "1.0.190", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha-1 = "0.10.1"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros"] }
url = "2.4.1"

[dependencies.async-compression]
version = "0.4.4"
features = ["futures-io", "gzip", "xz", "zstd"]

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls", "stream"]
