[package]
name = "rpm-repository"
version = "0.3.1"
edition = "2021"
rust-version = "1.88.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "RPM repository interaction"
keywords = ["createrepo", "rpm", "packaging", "repomd", "yum"]
homepage = "https://github.com/indygreg/linux-packaging-rs"
repository = "https://github.com/indygreg/linux-packaging-rs.git"
readme = "README.md"

[dependencies]
digest = "0.10.7"
futures = "0.3.31"
hex = "0.4.3"
pin-project = "1.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha-1 = "0.10.1"
sha2 = "0.10.9"
thiserror = "1.0.69"
tokio = { version = "1.49.0", features = ["macros"] }
url = "2.5.8"

[dependencies.async-compression]
version = "0.4.37"
features = ["futures-io", "gzip", "xz", "zstd"]

[dependencies.reqwest]
version = "0.12.28"
default-features = false
features = ["rustls-tls", "stream"]
